--- a/DreamLeague/Liga/templates/Liga/crear_equipo.html
+++ b/DreamLeague/Liga/templates/Liga/crear_equipo.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,7 +8,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background: url('{% static "Liga/images/Fondo para equipos app Dream League.jpg" %}') no-repeat center center fixed;
+            background-size: cover;
             margin: 0;
             padding: 0;
         }
@@ -80,24 +82,7 @@
             </form>
         </div>
         
-        <div class="form-container">
-            <h2>Buscar Equipo</h2>
-            <form method="get" action="{% url 'buscar_equipo' %}">
-                {{ form.as_p }}
-                <button type="submit">Buscar</button>
-            </form>
-
-            {% if resultados %}
-                <div class="results">
-                    <h3>Resultados:</h3>
-                    <ul>
-                        {% for equipo in resultados %}
-                            <li>{{ equipo.nombre }}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            {% endif %}
-        </div>
+        
     </div>
 </body>
 </html>
