--- a/DreamLeague/Liga/templates/Liga/buscar_division.html
+++ b/DreamLeague/Liga/templates/Liga/buscar_division.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscar División</title>
+    <title>Buscar Liga</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Buscar División</h1>
+        <h1>Buscar Liga</h1>
         <div class="form-container">
             <form action="{% url 'buscar_division' %}" method="get">
                 {% csrf_token %}
