--- a/DreamLeague/Liga/templates/Liga/crear_division.html
+++ b/DreamLeague/Liga/templates/Liga/crear_division.html
@@ -20,8 +20,8 @@
         }
 
         h1 {
-            font-size: 60px; /* Tamaño de fuente más grande */
-            color: white; /* Color blanco */
+            font-size: 60px;
+            color: white;
             margin-bottom: 30px;
         }
 
@@ -40,8 +40,8 @@
             background-color: #fff;
             width: 300px;
             vertical-align: top;
-            height: 400px; /* Ajusta la altura según sea necesario */
-            margin: 0 50px; /* Añadir espacio entre los contenedores */
+            height: 400px;
+            margin: 0 50px;
         }
 
         input[type="text"] {
