--- a/DreamLeague/Liga/templates/Liga/crear_jugador.html
+++ b/DreamLeague/Liga/templates/Liga/crear_jugador.html
@@ -39,8 +39,8 @@
             background-color: #fff;
             width: 300px;
             vertical-align: top;
-            height: 400px; /* Ajusta la altura según sea necesario */
-            margin: 0 50px; /* Añadir espacio entre los contenedores */
+            height: 400px; 
+            margin: 0 50px; 
         }
 
         input[type="text"], select {
