--- a/DreamLeague/Liga/templates/Liga/inicio.html
+++ b/DreamLeague/Liga/templates/Liga/inicio.html
@@ -16,49 +16,49 @@
 
         .container {
             text-align: center;
-            padding-top: 100px; /* Ajusta la cantidad según sea necesario */
+            padding-top: 100px; 
         }
 
         .titulo {
             font-size: 72px;
-            margin-bottom: 50px; /* Ajusta la cantidad según sea necesario */
+            margin-bottom: 50px; 
         }
 
         .dream-league {
             font-weight: bold;
-            color: #e90000ee; /* Cambia el color según sea necesario */
+            color: #e90000ee;
         }
 
         .opciones {
             display: flex;
             justify-content: space-around;
-            margin-top: 200px; /* Ajusta la cantidad según sea necesario */
+            margin-top: 200px; 
         }
 
         .opcion {
             padding: 20px;
-            border: 2px solid #333; /* Cambia el color según sea necesario */
+            border: 2px solid #333; 
             border-radius: 10px;
-            background-color: #af574c; /* Color de fondo más llamativo */
+            background-color: #af574c;
             transition: background-color 0.3s ease;
-            margin-bottom: 50px; /* Ajusta el espacio entre los botones */
+            margin-bottom: 50px; 
         }
 
         .opcion:hover {
-            background-color: #45a049; /* Cambia el color al pasar el ratón por encima */
+            background-color: #45a049; 
         }
 
         .opcion a {
             text-decoration: none;
-            color: white; /* Color de texto blanco */
+            color: white; 
             font-size: 24px;
-            font-weight: bold; /* Texto en negrita */
+            font-weight: bold; 
         }
 
         .buscar {
-            margin-top: 50px; /* Ajusta la cantidad para bajar el formulario */
+            margin-top: 50px; 
             text-align: center;
-            padding-top: 50px; /* Ajusta la cantidad para bajar el formulario */
+            padding-top: 50px; 
         }
 
         .buscar h2 {
